--- a/day08_spring_decreaseCoupling/pom.xml
+++ b/day08_spring_decreaseCoupling/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>itcoucou</groupId>
-    <artifactId>day07_spring_intit1</artifactId>
+    <artifactId>day08_spring_decreaseCoupling</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
@@ -32,7 +32,6 @@
             <artifactId>spring-web</artifactId>
             <version>5.2.0.RELEASE</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -45,6 +44,7 @@
             <version>5.2.0.RELEASE</version>
         </dependency>
     </dependencies>
+
 
 
 </project>
