--- a/day10_spring_aop/pom.xml
+++ b/day10_spring_aop/pom.xml
@@ -19,6 +19,12 @@
            <artifactId>aspectjweaver</artifactId>
             <version>1.8.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+        </dependency>
     </dependencies>
 
 
