--- a/day12_springmvc_init/src/main/webapp/WEB-INF/web.xml
+++ b/day12_springmvc_init/src/main/webapp/WEB-INF/web.xml
@@ -6,9 +6,8 @@
   <display-name>Archetype Created Web Application</display-name>
   <!--z注意配置的顺序要写对-->
   <filter>
-    <filter-name>characterEncodingFilter</filter-name>
+    <filter-name>SpringEncodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-    <!--初始化参数-->
     <init-param>
       <param-name>encoding</param-name>
       <param-value>UTF-8</param-value>
@@ -19,7 +18,7 @@
     </init-param>
    </filter>
   <filter-mapping>
-    <filter-name>characterEncodingFilter</filter-name>
+    <filter-name>SpringEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
