--- a/day13_ssm_init2/pom.xml
+++ b/day13_ssm_init2/pom.xml
@@ -15,8 +15,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -24,7 +24,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
 
     <!--集成maven项目下的web配置-->
@@ -57,6 +57,29 @@
       <artifactId>log4j</artifactId>
       <version>1.2.12</version>
     </dependency>
+    <dependency>
+
+      <groupId>org.aspectj</groupId>
+
+      <artifactId>aspectjweaver</artifactId>
+
+      <version>1.9.4</version>
+
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
+
+
+
+    <dependency>
+
+      <groupId>org.aspectj</groupId>
+
+      <artifactId>aspectjrt</artifactId>
+
+      <version>1.9.4</version>
+
+    </dependency>
     <!--集成spring-->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -77,14 +100,16 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-aop</artifactId>
     </dependency>
+
     <!--spring-aop 依赖-->
     <dependency>
        <groupId>org.aspectj</groupId>
        <artifactId>aspectjweaver</artifactId>
        <version>1.9.4</version>
     </dependency>
-    <!--集成Spring Mvc-->
 
+
+    <!--集成Spring Mvc-->
     <!--spring Web核心-->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -101,17 +126,18 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.8.4</version>
-
     </dependency>
-
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.17</version>
     </dependency>
 
-
-
+    <dependency>
+      <groupId>c3p0</groupId>
+      <artifactId>mabatis-spring</artifactId>
+      <version>1.3.0</version>
+    </dependency>
   </dependencies>
 
   <!--避免使用不同版本的组件导致意外情况发生，在使用spring依赖时就不需要在配置每个依赖的版本号了-->
